# orderline-dw-prefect

./: .dockerignore  .env-example  .gitignore  .gitmodules  Dockerfile  README.md  dbt_project.yml  docker-compose.yml  profiles.yml  pyproject.toml
docker/flows/: Dockerfile
docker/prefectserver/: Dockerfile
orderline_dw/: cli.py  config.py
orderline_dw/dbt/models/: sources.yml
orderline_dw/dbt/models/dm_sales/: klant.sql  product.sql  sales.sql
orderline_dw/dbt/seeds/: DatumDimensie.csv
orderline_dw/dbt/snapshots/: klant_type2.sql
orderline_dw/my_prefect/: all.py  init.py  init_and_full_load.py  initial_load.py  load.py  prefect_dbt_runner.py
orderline_dw/scripts/: oltp2staging.py
orderline_dw_prefect/: initial_load.py
orderlinedw_prefect/: all.py  cli.py  init.py  initial_load.py  prefect_dbt_runner.py
sql/dev/: count_dw.sql  empty_dw.sql  scd_scenarios.sql  scenarios.sql
